--- a/templates/_base.html
+++ b/templates/_base.html
@@ -9,6 +9,7 @@
 <!-- ADD FONT AWESOME FROM https://fontawesome.com/ -->
 <link rel="shortcut icon" type="image/png"
   href="{% static 'images/favicon.png' %}">
+  <link rel="stylesheet" href="{% static 'css/main.css' %}">
 <title>{% block title %}{% endblock %} | Django Jokes</title>
 </head>
 <body>
