--- a/templates/_base.html
+++ b/templates/_base.html
@@ -15,7 +15,7 @@
 <body>
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{% url 'homepage' %}">
+    <a class="navbar-brand" href="{% url 'pages:homepage' %}">
       <img src="{% static 'images/logo.png' %}" alt="Logo" class="img-fluid"/>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
