--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,10 +3,10 @@
 
 
 body {
-    padding-bottom: 50px;
+    padding-bottom: 550px;
   }
 
-  /* FORM STYLES */
+
 label {
   font-variant: small-caps;
 }
@@ -16,13 +16,14 @@ label {
   font-weight: normal;
   margin: 0 1rem;
 }
+
     
   footer {
-    border-top: 1px solid darkgreen;
+    border-top: 1px solid rgb(100, 12, 0);
   }
   
   header {
-    border-bottom: 1px solid darkgreen;
+    border-bottom: 1px solid rgb(100, 17, 0);
   }
   
   h2 {
