--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,30 +1,31 @@
-  body {
-    padding-bottom: 50px;
-  }
-
-
-  label {
+body {
+  padding-bottom: 50px;
+}
+  
+label {
   font-variant: small-caps;
-  }
+  font-style:italic;
+  font-size: xx-large;
+}
 
-  .form-check {
+.form-check {
   display: inline-block;
   font-weight: normal;
   margin: 0 1rem;
-  }
+}
 
-    
-  footer {
-    border-top: 1px solid rgb(100, 12, 0);
-  }
-  
-  header {
-    border-bottom: 1px solid rgb(100, 17, 0);
-  }
-  
-  h2 {
-    font-style: italic;
-  }
+
+footer {
+  border-top: 1px solid darkgreen;
+}
+
+header {
+  border-bottom: 1px solid darkgreen;
+}
+
+h2 {
+  font-style: italic;
+}
 
   
 
