--- a/templates/jobs/joke_writer.html
+++ b/templates/jobs/joke_writer.html
@@ -1,5 +1,8 @@
 {% extends "_base.html" %}
 {% load crispy_forms_tags %}
+{% load static %}
+
+
 
 {% block title %}Job Application: Joke Writer{% endblock %}
 {% block main %}
