--- a/templates/jokes/joke_form.html
+++ b/templates/jokes/joke_form.html
@@ -1,4 +1,5 @@
 {% extends "_base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}Add/Update Joke{% endblock %}
 {% block main %}
@@ -6,7 +7,7 @@
     style="max-width: 30rem">
     <form method="post">
       {% csrf_token %}
-      {{ form }}
+      {{ form|crispy }}
       <button class="btn btn-success float-end">Submit</button>
     </form>
   </div>
