--- a/templates/jobs/applicant_form.html
+++ b/templates/jobs/applicant_form.html
@@ -8,7 +8,7 @@
 {% block main %}
   <h2 class="text-center">Joke Writer Application</h2>
   <div class="card border-primary m-auto mb-3 p-3" style="max-width: 50rem">
-    <form method="post" novalidate>
+    <form method="post">
       {% csrf_token %}
       {{ form.job|as_crispy_field }}
       <div class="row">
