--- a/templates/jobs/applicant_form.html
+++ b/templates/jobs/applicant_form.html
@@ -1,16 +1,12 @@
 {% extends "_base.html" %}
 {% load crispy_forms_tags %}
-{% load static %}
-
-
 
 {% block title %}Job Application: Joke Writer{% endblock %}
 {% block main %}
   <h2 class="text-center">Joke Writer Application</h2>
   <div class="card border-primary m-auto mb-3 p-3" style="max-width: 50rem">
-    <form method="post">
+    <form method="post" novalidate>
       {% csrf_token %}
-      {{ form.job|as_crispy_field }}
       <div class="row">
         <div class="col-md-6 mb-0">
           {{ form.first_name|as_crispy_field }}
@@ -45,7 +41,6 @@
       </div>
       {{ form.cover_letter|as_crispy_field }}
       {{ form.confirmation|as_crispy_field }}
-      
       <button class="form-control btn btn-success">Apply</button>
     </form>
   </div>
